<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Mapa Alerta</string>
    <string name="title_activity_maps">Mapa editor</string>

    <string name="start_point">Start point</string>
    <string name="end_point">End point</string>
    <string name="terreno">Terreno</string>



    <string name="problema_recuperar_gpx">PROBLEMAS AO RECUPERAR GPX</string>
    <string name="problema_carregar_gpx">PROBLEMAS AO CARREGAR ARQUIVO GPX</string>
    <string name="aguarde_carregando_arquivo">AGUARDE CARREGANDO ARQUIVO...</string>
    <string name="load_gpx">Carregar GPX</string>
    <string name="remove_gpx">Remover GPX</string>
    <string name="salvar">Salvar</string>
    <string name="sem_titulo"><![CDATA[<SEM TÍTULO>]]></string>
    <string name="alert">ALERTA</string>
    <string name="route">ROTA</string>
    <string name="actions">AÇÕES:</string>
    <string name="sample_text">Sample Text</string>
    <string name="hint_edit_map">Use \'LONG CLICK\' para edição do mapa!\n</string>
</resources>
