<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/editar"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/salvar"
        app:showAsAction="always" />
    <item
        android:id="@+id/save"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/salvar"
        app:showAsAction="always" />
    <item
        android:id="@+id/load_gpx"
        android:title="@string/load_gpx"
        android:visible="true"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/remove_gpx"
        android:title="@string/remove_gpx"
        android:visible="true"
        app:showAsAction="ifRoom" />
</menu>